+++ version 2.0
* chat: #2669 implemented: store content of input box in chat widgets (Vogel)
* mediaplayer: #943 fixed: disable mediaplayer statuses after changing it manually (Vogel)
* chat: #1219 implemented: paste and send action added to chat widget (Vogel)

+++ version 1.1
* tabs: #2867 fixed: open in new window/tab works properly (Vogel)

+++ version 1.0
* core: #2854 fixed: properly handle e-mail application (Vogel)

+++ version 1.0-rc10
* tabs: #2852 fixed: properly handle tabs disabled by default (Vogel)
* spellchecker: #2816 fixed: allow empty dictionary list (Vogel)
* windows: #2853 fixed: do not remove user themes manually installed in Program Files during installation (Vogel)

+++ version 1.0-rc9
* jabber: #2851 fixed: properly support special chars (Vogel)

+++ version 1.0-rc8
* themes: #2844 fixed: more formats of archives supported (Vogel)
* gui: #2845 fixed: change Help link into Forum link (Vogel)
* otr: #2846 fixed: unable to start otr session without keys directory (Vogel)

+++ version 1.0-rc7
* gui: #2839 fixed: properly set chat window title when no tabs plugin is loaded (Vogel)
* jabber: #2842 fixed: vcard support problems resolved (Vogel)
* jabber: #2843 fixed: avatar handling issues resolved (Vogel)

+++ version 1.0-rc6
* gui: #2836 fixed: do not allow to shrink notification configuration widget too much (Vogel)
* windows: #2837 fixed: invalid fonts on windows after opening chat window (Vogel)
* chat: #2840 fixed: 'Enter sends' message action was not properly updating (Vogel)

+++ version 1.0-rc5
* otr: #2835 fixed: chat button was displayed inproperly on Windows (Vogel)
* windows: add more external plugins to installer (Vogel)

+++ version 1.0-rc4
* plugins: #2831 fixed: remove code from plugins object constructors and destructors (Vogel)
* gui: #2832 fixed: improved behavior of new open chat with window (Vogel)
* gui: #2833 fixed: dpi in user list (beevvy)
* gui: #2823 fixed: show scrollbar in plugins widget on Windows (Vogel)
